<resources>
    <string name="app_name">БК2017</string>
    <string name="action_settings">Settings</string>
    <string name="distance_input_name">Дистанція, м :</string>
    <string name="temperature_input_name">Температура, °С :</string>
    <string name="pressure_input_name">Тиск, мм.рт.ст :</string>
    <string name="speed_input_name">Швидкість вітру, м/с :</string>
    <string name="direction_input_name">Напрямок вітру :</string>
    <string name="vrtc_sight_output_name">Верхній приціл, № :</string>
    <string name="vrtc_correction_output_name">Зміщення Т.П., т.д. :</string>
    <string name="hrst_sight_output_name">Боковий приціл, № :</string>
    <string name="hrst_correction_output_name">Зміщення Т.П., т.д. :</string>
    <string name="zero_value_double">0.0</string>
    <string name="zero_value_integer">0</string>
    <string name="zero_value_string">0/0</string>
    <string name="error_text">Помилка</string>
    <string name="calculate">Розрахувати</string>
    <string name="select_mode_text">Вибір режиму</string>
    <string name="night_mode_name">Нічний режим</string>
    <string name="day_mode_name">Денний режим</string>
    <string name="yes_text">Так</string>
    <string name="cancel_text">Відміна</string>
    <string name="select_system_text">Вибір системи</string>
    <string name="select_system">Вибір вогневої системи</string>
    <string name="select_about_text">Про програму</string>
    <string name="ok_text">ОК</string>

    <!-- Повідомлення помилок розрахунку -->
    <string name="c_dist_out_min">Розрахована дистанція менша табличного діапазону!</string>
    <string name="c_dist_out_max">Розрахована дистанція більша табличного діапазону!</string>
    <string name="t_dist_out_min">Введена дистанція менша табличного діапазону!</string>
    <string name="t_dist_out_max">Введена дистанція більше табличного діапазону!</string>
    <string name="unknown_error">Виявлена невідома помилка!</string>

    <!-- Повідомлення завантаження вогневої системи -->
    <string name="load_gun_system">Завантажте вогневу систему!</string>
    <string name="system_not_loaded">Помилка завантаження вогневої системи!\nВогневу систему не завантажено!</string>

</resources>
